updated app translations

--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -8,23 +8,30 @@ Actors=Autori
 Add=Aggiungi
 AddConnectedProcesses=Aggiungi i processi collegati
 AddedValue=Valore aggiunto
+AddIndicator=Aggiungi indicatore
 AdditionalInformation=Ulteriori informazioni
 AddNewChildCategory=Aggiungi una nuova sotto categoria
 Address=Indirizzo
+AddScore=Aggiungi punteggio
 AddSection=Aggiungi sezione
 AddToMethodParameters=Aggiungi ai parametri del metodo
 AdministrativeInformation=Informazioni amministrative
+Aggregation=Aggregazione
+AggregationType=Tipo di aggregazione
 Allocation=Allocazione
 AllocationFactors=Fattori di allocazione
 AllocationMethod=Metodo di allocazione
+ALocationCodeIsRequired=Occorre indicare un codice di localit\u00e0
 AlreadyConnected=Gi\u00e0 connesso
 AlreadyPresent=Gi\u00e0 presente
 Amount=Quantit\u00e0
 Analysis=Analisi dettagliata
 AnalysisResultOf=Risultati dell'analisi di
 AnalyzingForProblems=Analisi dei problemi in corso
+AnErrorOccuredWhileReceivingCommitData=Si \u00e8 verificato un errore in fase di ricezione dei dati
 ApplyFormatToInputsOutputs=Applica il formato agli input/output dell'editor del processo
 AsDefinedInProcesses=Come definito nei processi
+AssessDataQuality=Valuta la qualit\u00e0 dei dati
 AssignUnits=Assegna unit\u00e0
 Author=Autore
 AvoidedProduct=Prodotto evitato
@@ -78,9 +85,11 @@ Comma=Virgola
 Comment=Commento
 Commit=Confermo...
 CommitChangesToRepository=Conferma le modifiche alla repository
+CommitDate=Data di commit
 CommitingChanges=Confermo le modifiche
 CommitMessage=Messaggio di conferma
 CommitReferenceNotice=Le modifiche di riferimento devono essere salvate
+Compare=Compara
 ComparingWithRepository=Confronto con la repository
 Complete=Completa
 CompleteReferenceData=Dati di riferimento completi
@@ -119,6 +128,7 @@ CouldNotFindKMLData=Impossibile trovare dati in formato KML nel file. Si \u00e8 
 CouldNotOpenDatabase=Impossibile aprire il database
 CouldNotOverwriteFile=Impossibile sovrascrivere il file
 Country=Paese
+Coverage=Copertura
 CreateANewDatabase=Crea un nuovo database
 CreateANewProductFlowForTheProcess=Crea un nuovo flusso di prodotto per il processo
 CreateDatabase=Creazione del database in corso
@@ -128,6 +138,7 @@ CreateProcess=crea processo
 CreateProcesslink=crea collegamento al processo
 CreateProductSystem=Crea un sistema prodotto
 CreatesANewActor=Crea un nuovo autore
+CreatesANewDataQualitySystem=Crea un nuovo sistema di qualit\u00e0 dei dati
 CreatesANewFlow=Crea un nuovo flusso
 CreatesANewFlowProperty=Crea una nuova propriet\u00e0 per il flusso
 CreatesANewImpactMethod=Crea un nuovo metodo di valutazione degli impatti
@@ -156,6 +167,7 @@ DatabaseName=Nome del database
 DatabaseNeedsUpdate=Il database \u00e8 pi\u00f9 recente della versione di openLCA in uso.
 DatabaseRenameError=Il nome scelto non \u00e8 valido o esiste gi\u00e0 un database con lo stesso nome.
 DatabaseType=Tipo di database
+DatabaseValidationCompleteNoErrorsWereFound=Validazione del database completata. Non sono stati trovati errori.
 DatabaseVersionCheckFailed=Impossibile determinare la versione del database. Sei sicuro che sia un database in formato openLCA?
 DatabaseWasExportedToFile=Il database \u00e8 stato esportato
 DataCollectionPeriod=Periodo di raccolta dei dati
@@ -163,6 +175,9 @@ DataCompleteness=Completezza dei dati
 DataDocumentor=Documentatore dei dati
 DataGenerator=Generatore dei dati
 DataQuality=Qualit\u00e0 dei dati
+DataQualityProperties=Propriet\u00e0 della qualit\u00e0 dei dati
+DataQualitySystem=Sistema di qualit\u00e0 dei dati
+DataQualitySystems=Sistemi di qualit\u00e0 dei dati
 DataSelection=Selezione dati
 DataSet=Set di dati
 DataSetOtherEvaluation=Altra valutazione del set di dati
@@ -209,6 +224,7 @@ Display=Visualizza
 Doi=Doi
 DoNotShowThisMessageAgain=Non mostare nuovamente il messaggio
 Dot=Punto
+DownloadingData=Download dei dati in corso...
 DoYouReallyWantToDelete=Vuoi veramente eliminare {0}
 Economic=Economica
 EcoSpold2Export=Esporta in formato EcoSpold 2
@@ -225,13 +241,16 @@ EnterLocationNameAndCode=Inserire il nome e il codice della nuova posizione
 Error=Errore
 ErrorPopupMessage=Per ulteriori informazioni vedere il file di log
 ErrorPopupTitle=Si \u00e8 verificato un errore imprevisto
+Errors=Errori
 EvaluateLocations=Valuta per le posizioni esistenti
 EvaluatingLocations=Valutazione delle posizioni
 EvaluationSchema=Schema di valutazione
 Example=Esempio
 ExcelExport=Esporta in formato Excel
 ExchangesAreUsed=Impossibile eliminare. Uno o pi\u00f9 scambi selezionati sono utilizzati in un sistema di prodotto
+ExcludeExchangesWithDefaultProviders=Escludi gli scambi con i fornitori predefiniti
 ExcludeZeroEntries=Escludi i valori nulli
+ExcludeZeroValues=Escludi i valori nulli
 Expand=espandi
 ExpandAll=Espandi tutto
 Export=Esporta...
@@ -313,6 +332,7 @@ Home=Home
 Host=Host
 Hourly=Ogni ora
 HTMLGraph=Grafico HTML
+Id=Id
 ILCD_AUTHENTICATION_FAILED_MSG=Autenticazione fallita. Verifica il tuo user name e la tua password.
 ILCD_CONNECTION_FAILED_MSG=Connessione fallita. Controlla la tua connesione di rete, l'URL e i dati utilizzati per l'accesso.
 ILCD_CONNECTION_WORKS_MSG="Connessione stabilita."
@@ -348,9 +368,12 @@ ImportingKMLData=Importo dati in formato KML
 ImportingXMLData=Importo dati in formato XML (formato Eco Spold2)
 ImportKMLGeographies=Importa informazione geografica in formato KML
 IncludeCostCalculation=Includi il calcolo dei costi
+Indicator=Indicatore
 IndicatorBarChart=Grafico dei risultati per singolo indicatore
+Indicators=Indicatori
 IndicatorsAndParameters=Indicatori e parametri
 IndicatorScore=Punteggio dell'indicatore
+IndicatorsScores=Indicatori & Punteggi
 Information=Informazioni
 InfrastructureFlow=Flusso di infrastruttura
 InfrastructureProcess=Processo di infrastruttura
@@ -374,6 +397,7 @@ InvalidValue=Valore non valido
 Inventory=Inventario
 InventoryResult=Risultato di inventario
 InventoryResults=Risultati di inventario
+IsDefault=E' il predefinito
 IsInvalidFormula=\u00e8 una formula non valida
 IsNotValidNumber=\u00e8 un numero non valido
 IsNotValidParameterName=\u00e8 un nome di parametro non valido
@@ -381,6 +405,7 @@ IsReference=\u00c8 il rifermento
 KeepLocalModel=Mantieni modello locale
 KeepModelDeleted=Mantieni modello eliminato
 KmlEditor=KML Editor
+Label=Etichetta
 Language=Lingua
 LastChange=Ultima modifica
 LastModificationDate=Data dell'ultima modifica
@@ -425,6 +450,7 @@ MediumOpportunity=Opportunit\u00e0 media
 MediumRisk=Rischio medio
 MemoryToHighMessage=Il valore di memoria \u00e8 troppo elevato per il tuo sistema operativo.
 MemoryToLowMessage=Il valore di memoria deve essere almeno 256 MB.
+Message=Messaggio
 Methods=Metodi
 MinimalTree=albero minimo
 Minimize=minimizza
@@ -462,6 +488,7 @@ NewDatabase=Nuovo database
 NewDatabase_AlreadyExists=Esiste gi\u00e0 un database con questo nome
 NewDatabase_InvalidName=Il nome non \u00e8 un identificativo valido (sono ammessi solo caratteri, numeri e il simbolo _)
 NewDatabase_NameToShort=Il nome del database deve essere di almeno 4 caratteri
+NewDataQualitySystem=Nuovo sistema di qualit\u00e0 dei dati
 NewFlow=Nuovo flusso
 NewFlowProperty=Nuova propriet\u00e0 del flusso
 NewImpactCategory=Nuova categoria di impatto
@@ -483,6 +510,7 @@ NoChangesInLocalDb=Nessuna modifica nel database locale
 NoCostCategorySelected=Non \u00e8 stata selezionata nessuna categoria di costo
 NoData=Nessun dato
 NoDatabaseOpened=Nessun database \u00e8 aperto
+NoDataQualitySystemSpecified=-- Non \u00e8 stato specificato alcun sistema di qualit\u00e0 dei dati --
 NoDescription=Nessune descrizione
 NoDistribution=Nessuna distribuzione
 NoExportFilesSelected=Nessun file \u00e8 stato selezionato per l'esportazione
@@ -492,6 +520,7 @@ NoProjectVaraintsAreDefined=Non sono state definite varianti di progetto
 NoQuantitativeReferenceSelected=Non \u00e8 stato selezionato nessun riferimento quantitativo
 NoReferenceFlowPropertySelected=Non \u00e8 stata selezionata nessuna propriet\u00e0 del flusso
 NoReferenceProcessSelected=Non \u00e8 stato selezionato nessun processo di riferimento
+NoReferenceSet=Nessun set di riferimento
 NoRisk=Rischio nullo
 NormalDistribution=Distribuzione normale
 NormalisationBarChart=Normalizzazione - Grafico a barre
@@ -506,12 +535,14 @@ NoShapefileParameterSelected=Nessun parametro selezionato dello shape file pu\u0
 NotAnIntegerNumber=Il valore inserito non \u00e8 un numero intero.
 NotApplicable=Non applicabile
 Note=Nota
+NoteDefaultProviders=Nota: I fornitori predefiniti degli scambi sostituiti verranno rimossi a causa della non corrispondenza tra gli attuali fornitori e i nuovi flussi sostituiti. Controlla il box soprastante per evitare che i fornitori predefiniti vengano rimossi (In questo caso i flussi non verranno sostituiti).
 Notification=Notifica
 NoUnitGroupSelected=Non \u00e8 stata selezionata nessuna unit\u00e0 di gruppo
 NumberFormatPage_Description=Imposta il numero dei decimali che devono essere visualizzati.
 NumberOfDecimalPlaces=Numero di cifre decimali
 NumberOfIterations=Numero di iterazioni\:
 NumberOfSimulations=Numero di simulazioni
+OfProduct=di prodotto
 OK=OK
 OnlineHelp=Aiuto in linea
 Open=Apri
@@ -546,13 +577,17 @@ PhysicalAndEconomicAllocation=Allocazione fisica ed economica
 PleaseEnterAName=Inserire un nome
 PleaseEnterANewName=inserire un nuovo nome
 PleaseEnterTheNameOfTheNewCategory=Inserire il nome della nuova categoria\:
+PleaseSelectThePropertiesForTheDataQualityAssessment=Selezionare le propriet\u00e0 per la valutazione della qualit\u00e0 dei dati
 PleaseSpecifyHost=Specifica un host
 PleaseSpecifyPortNumber=Specifica il numero della porta
 PleaseSpecifyUser=Specifica l'utente
 Point=Punto
 Polygon=Poligono
 Port=Porta
+Position=Posizione
 Prefer=Preferisci\: {0}
+Preparing=Preparazione
+PreviousCommit=Precedente commit
 Price=Prezzo
 Process=Processo
 ProcessContributionChart=Grafico dei contributi di processo
@@ -579,6 +614,7 @@ ProjectResults=Risultati del progetto
 Projects=Progetti
 ProjectSetup=Configurazione del progetto
 Properties=Propriet\u00e0
+Providers=Fornitori
 Publication=Pubblicazione
 QuantitativeReference=Riferimento quantitativo
 Quantity=Quantit\u00e0
@@ -586,7 +622,7 @@ QuickResults=Calcolo rapido
 RawValue=Valore di riferimento
 ReallyDeleteShapeFile=Si vuole veramente eliminare lo shapefile selezionato? Tutte le modifiche verranno salvate automaticamente
 RecalculateQuestion=Si stanno per ricalcolare i valori. Si conferma di voler continuare?
-RecalculateQuestionText=Si vuole che i dati di default e l'incertezza vengano ricalcolati con la fonte dei dati selezionata?
+RecalculateQuestionText=Si vuole che i valori predefiniti e l'incertezza vengano ricalcolati utilizzando la fonte dei dati selezionata?
 RecalculateQuestionTitle=Ricalcola
 RecognizedLibraryDatasetsDescription=I seguenti set di dati sono stati identificati come libreria di set di dati. Si prega di assicurarsi di non\u00a0violare condizioni di licenza\u00a0prima\u00a0di confermare i cambiamenti.
 ReconnectProcesslink=riconnetti collegamento di processo
@@ -608,10 +644,14 @@ RemoteDatabase=Database remoto
 RemoteModel=Modello remoto
 Remove=Rimuovi
 RemoveConnections=Rimuovi le connessioni
+RemoveIndicator=Rimuovi indicatore
 RemoveObject=Rimuovi oggetto
+RemoveScore=Rimuovi punteggio
 RemoveSelected=Rimuovi la selezione
 RemoveSupplyChain=Rimuovi la catena di approvvigionamento
 Rename=Rinomina
+ReplaceFlow=Sostitusci flusso
+ReplaceProvider=Sostituisci fornitore
 Report=Report
 ReportName=Nome nel report
 ReportParameters=Parametri del report
@@ -629,6 +669,7 @@ ResultsOf=Risultati di
 ResultsOfProject=Risultati del progetto\:
 Reviewer=Revisore
 RiskLevel=Livello di rischio
+RoundingMode=Modalit\u00e0 di arrotondamento
 Route=Percorso
 RunCalculation=Calcolo in corso
 SamplingProcedure=Procedura di campionamento
@@ -641,10 +682,25 @@ SaveAsImage=Salva come immagine
 SaveChanges=Salva le modifiche
 SaveChangesQuestion=Vuoi salvare le modifiche?
 SavingDiagramAsImageIn=Salvataggio del diagramma come immagine in {0}
+Scores=Punteggi
 Search=Cerca
+SearchAllTypes=Cerca tutti i tipi
+SearchInActors=Cerca negli autori
+SearchInDataQualitySystems=Cerca nei sistemi della qualit\u00e0 dei dati
+SearchInFlowProperties=Cerca nelle propriet\u00e0 dei flussi
+SearchInFlows=Cerca nei flussi
 Searching=Ricerca in corso...
 SearchingForReferencedChanges=Ricerca in corso delle modifiche referenziate
 SearchingForUnits=Ricerca delle unit\u00e0 in corso...
+SearchInLCIAMethods=Cerca nei metodi LCIA
+SearchInLocations=Cerca nelle posizioni
+SearchInParameters=Cerca nei parametri
+SearchInProcesses=Cerca nei processi
+SearchInProductSystems=Cerca nei sistemi di prodotto
+SearchInProjects=Cerca nei progetti
+SearchInSocialIndicators=Cerca negli indicatori sociali
+SearchInSources=Cerca nelle fonti
+SearchInUnitGroups=Cerca nei gruppi di unit\u00e0
 SearchParameters=Ricerca parametri
 SearchProvidersFor=Cerca i fornitori di
 SearchRecipientsFor=Cerca i destinatari di
@@ -652,7 +708,9 @@ SearchResults=Risultati della ricerca
 Section=Sezione
 Select=Seleziona {0}
 SelectADirectory=Seleziona una directory
+SelectAll=Seleziona tutto
 SelectAUserInterfaceLanguage=Scegli la lingua per l'interfaccia utente
+SelectedCommit=Commit selezionato
 SelectedParameterWasAlreadyAdded=Il parametro selezionato \u00e8 gi\u00e0 stato aggiunto in questo metodo LCIA
 SelectImportFiles=Selezione dei files da importare
 SelectLanguageNoteMessage=Le modifiche avranno effetto solo dopo il riavvio di openLCA
@@ -664,6 +722,7 @@ SelectRecipients=Seleziona destinatari
 SelectTheExportFile=Seleziona il file da esportare
 SelectTheParameterYouWantToReferTo=Seleziona il paramtero a cui riferirti
 Semicolon=Punto e virgola
+ServerConfigurations=Configurazioni del server
 ServerUrl=URL del server
 SetAsReferenceCurrency=Impostare come valuta di riferimento?
 SetReferenceCurrencyQuestion=Si vuole impostare questa valuta come valuta di riferimento del database?
@@ -675,6 +734,7 @@ ShareRepository=Condividi la repository
 SharingRepository=Condivido la repository
 Show=mostra
 ShowFormulas=Mostra le formule
+ShowInHistory=Mostra nella cronologia
 ShowInMap=Mostra sulla mappa
 ShowOutline=Mostra la outline
 Showperspectives=Mostra &prospettive
@@ -703,6 +763,7 @@ StartDate=Data di inizio
 Statistics=Statistiche
 SubCategory=Sotto categoria
 Sum=Somma
+Summable=Sommabile
 Synonyms=Sinonimi
 SystemProcess=Processo di sistema
 SystemSaveProceedQuestion=Il sistema prodotto deve essere salvato prima di eseguire l'azione richiesta. Vuoi procedere?
@@ -731,6 +792,7 @@ TotalRequirements=Fabbisogno totale
 Tree=albero
 TriangleDistribution=Distribuzione triangolare
 Type=Tipo
+Uncertainties=Incertezze
 Uncertainty=Incertezza
 UncertaintyDistribution=Distribuzione dell'incertezza
 UniformDistribution=Distribuzione uniforme
@@ -765,9 +827,12 @@ Usage=Utilizzo
 UsageOf=Utilizzo di
 UseBrowserFeatures=Utilizza le funzioni del browser
 UsedInProcesses=Utilizzato nei processi
+UseMaximumScoreForZeroValues=Usa il punteggio massimo per i valori nulli
 User=Utente
 UserFriendlyName=Soprannome
 Username=Nome utente
+Validate=Convalida
+ValidatingDatabase=Convalida del database
 Value=Valore
 Variant=Variante
 VariantDescriptionTable=Tabella di descrizione delle varianti
@@ -777,13 +842,17 @@ VersionNewer=Versione pi\u00f9 recente
 VeryHighRisk=Rischio molto alto
 VeryLowRisk=Rischio molto basso
 Warning=Attenzione
+Warnings=Avvertenze
 Waste=Rifiuto
 Website=Website
 Weekly=Ogni settimana
+WeightedAverage=Media ponderata
+WeightedSquaredAverage=Media quadratica ponderata
 Weighting=Pesatura
 WeightingFactor=Fattore di pesatura
 Welcome=Benvenuto
 Window=&Finestra
+With=con
 WithPassword=Con password
 Year=Anno
 Yes=S\u00ec
