improved labels for database import actions

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -14,6 +14,8 @@ ILCDNetworkExport=ILCD Network Export
 ILCDNetworkImport=ILCD Network Import
 ImpactMethodEditor=Impact method editor
 ImpactMethods=Impact methods
+ImportEntireDatabase=Import entire database
+ImportEntireDatabase_Info=Import an entire database into the active database.
 ImportExport=Import/Export
 LCIAMethods=LCIA methods
 Locations=Locations
