--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -39,6 +39,7 @@ AvoidedProduct=Avoided product
 AvoidedProductFlow=Avoided product flow
 AvoidedWasteFlow=Avoided waste flow
 BackgroundData=Background data
+BackupDatabase=Backup database
 BaseUncertainty=Base uncertainty
 Browse=Browse
 BrowseLocalFiles=Browse local files...
@@ -649,6 +650,7 @@ Reset=Reset
 ResetAll=Reset all
 ResetSelection=Reset selection
 Resize=resize
+RestoreDatabase=Restore database
 Result=Result
 Results=Results
 ResultsOf=Results of
