--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -37,6 +37,7 @@ AvoidedProduct=\u00c4quivalenzprodukt
 AvoidedProductFlow=\u00c4quivalenzproduktfluss
 AvoidedWasteFlow=\u00c4quivalenzabfallfluss
 BackgroundData=Hintergrunddaten
+BackupDatabase=Datenbank exportieren
 BaseUncertainty=Basisunsicherheit
 Browse=Suchen
 BuildNextTier=N\u00e4chste Ebene aufbauen
@@ -643,6 +644,7 @@ Reset=Zur\u00fccksetzen
 ResetAll=Alle zur\u00fccksetzen
 ResetSelection=Auswahl zur\u00fccksetzen
 Resize=Gr\u00f6\u00dfe \u00e4ndern
+RestoreDatabase=Datenbank wiederherstellen
 Result=Ergebnis
 Results=Ergebnisse
 ResultsOf=Ergebnisse f\u00fcr
