test ILCD network connection: do not display anonymous access as error

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -109,6 +109,7 @@ ConnectWithSystemProcessesIfPossible=Connect with system processes if possible
 ConnectingToRepository=Connecting to repository: 
 Connection=Connection
 ConnectionFailed=Connection failed
+ConnectionWithAnonymousAccess=Connection with anonymous access.
 ConsumedBy=Consumed by
 Content=Content
 Context=Context
