adopted changes in ILCD API

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -337,7 +337,7 @@ ILCDNetworkSettings=ILCD Network settings
 ILCDOtherSettings=ILCD other settings
 ILCD_AUTHENTICATION_FAILED_MSG=Authentication failed. Please check your user name and password.
 ILCD_CONNECTION_FAILED_MSG=Connection failed. Please check your network connection, URL, and user data.
-ILCD_CONNECTION_WORKS_MSG="Connection works."
+ILCD_CONNECTION_WORKS_MSG=Connection works.
 ILCD_NO_READ_OR_WRITE_ACCESS_MSG=You do not have read or write access
 ILCD_NetworkImport=Network Import
 ILCD_RunImport=Run Import
