wrong labels in search text button

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -674,6 +674,7 @@ Scores=Scores
 Search=Search
 SearchAllTypes=Search all types
 SearchInActors=Search in actors
+SearchInCurrencies=Search in currencies
 SearchInDataQualitySystems=Search in data quality systems
 SearchInFlowProperties=Search in flow properties
 SearchInFlows=Search in flows
