--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -119,6 +119,7 @@ ContributionTreeLocations=Contribution tree for locations
 ConversionFactor=Conversion factor
 Copy=Copy
 CopyAllFromRightToLeft=Copy all from right to left
+CopyMetaDataFromReferenceProcess=Copy meta data from reference process
 CopySelectionFromRightToLeft=Copy selection from right to left
 Copyright=Copyright
 CostCategory=Cost category
@@ -667,6 +668,7 @@ Sankey_ScaleDescription=Process colour scale (contributions in [%])
 Save=Save
 SaveAs=Save as...
 SaveAsImage=Save as image
+SaveAsLCIResult=Save as LCI result
 SaveChanges=Save changes
 SaveChangesQuestion=Do you want to save the changes?
 SavingDiagramAsImageIn=Saving diagram as image in {0}
