waste: create a product system: check reference flow
... should be a product output or waste input

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -512,7 +512,7 @@ NoParameterSelected=No parameter selected
 NoProjectVaraintsAreDefined=No project variants are defined
 NoQuantitativeReferenceSelected=No quantitative reference selected
 NoReferenceFlowPropertySelected=No reference flow property selected
-NoReferenceProcessSelected=No reference process selected
+NoReferenceProcessSelected=No process with valid reference product output or waste input selected
 NoReferenceSet=No reference set
 NoRisk=No risk
 NoShapefileParameterSelected=There is no shapefile parameter selected that could be added as method parameter
