--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -506,7 +506,7 @@ NoParameterSelected=Kein Parameter ausgew\u00e4hlt
 NoProjectVaraintsAreDefined=Keine Projektvarianten definiert
 NoQuantitativeReferenceSelected=Keine Quantitative Referenz ausgew\u00e4hlt
 NoReferenceFlowPropertySelected=Keine Referenzflusseigenschaft ausgew\u00e4hlt
-NoReferenceProcessSelected=Keinen Referenzprozess ausgew\u00e4hlt
+NoReferenceProcessSelected=Es wurde kein Prozess mit einem Produktoutput oder Abfallinput als quantitative Referenz ausgew\u00e4hlt
 NoReferenceSet=Keine Referenz gesetzt
 NoRisk=Kein Risiko
 NormalDistribution=Normalverteilung
