waste: display costs of waste inputs as revenues

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -127,7 +127,7 @@ CostFormula=Cost formula
 CostResult=Cost result
 CostValue=Cost value
 Costs=Costs
-CostsPerUnit=Costs per unit
+CostsPerUnit=Costs/revenues per unit
 CostsRevenues=Costs/Revenues
 CouldNotAllocateMemoryError=openLCA could not allocate enough physical memory to perform the calculation. Please adjust your memory settings under 'File/Preferences' -> Configuration
 CouldNotFindKMLData=Could not find KML data in the file you provided. Is it compliant to the EcoSpold2 format? More information regarding the format can be found at http://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
