Updated messages in olca-html

--- a/olca-app-html/src/start_page/msg/messages.properties
+++ b/olca-app-html/src/start_page/msg/messages.properties
@@ -2,8 +2,8 @@ title1=The open source software for sustainability assessment.
 title2=For modeling the life cycle of things.
 title3=Licenced under the Mozilla Public Licence 2.0.
 title4=Created and maintained since 2006 by GreenDelta, Berlin
-whatsNew.title=New in version 1.6
-whatsNew.text=Main changes: A <strong>Data Quality System</strong> documents and calculates data quality of processes, of exchanges and of complete product systems. The <strong>openLCA Collaboration Server</strong> provides powerful multi user and data management / versioning capabilities, and integrates now with openLCA. Several usability improvements and bug fixes.
+whatsNew.title=New in version 1.7
+whatsNew.text=Main changes: <strong>Waste modelling</strong> using the actual flow direction enables the user to create waste treatment processes from waste flows. <strong>The LCA Collaboration Server</strong> was further developed and openLCA 1.7 implements the new API. Also several data import/export improvements were implemented. For details, see here.
 whatsNew.link=For details, see <a id="news">here</a>.
 gettingStarted.title=Getting started
 gettingStarted.text=Import or create a new database, and import an LCIA method or method pack. Both are available from <a id="nexus">openLCA Nexus</a>.
