Added comment overview

--- a/olca-app/OSGI-INF/l10n/bundle.properties
+++ b/olca-app/OSGI-INF/l10n/bundle.properties
@@ -1,5 +1,6 @@
 ActorEditor=Actor editor
 Actors=Actors
+Comments=Comments
 Configuration=Configuration
 DataProvider=Data provider
 EcoSpold=EcoSpold 1
