--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -24,19 +24,20 @@ AllocationMethod=Allocation method
 AlreadyConnected=Already connected
 AlreadyPresent=Already present
 Amount=Amount
-AnErrorOccuredWhileReceivingCommitData=An error occurred while receiving commit data
 Analysis=Analysis
 AnalysisResultOf=Analysis result of
 AnalyzingForProblems=Analyzing for problems
 ApplyFormatToInputsOutputs=Apply format to inputs/outputs in process editor
 ApplyingDatabaseUpdates=Applying database updates
 AreYouSureYouWantToCheckout=Are you sure you want to checkout the selected commit? This action will override your current database state and cannot be undone.
+ArithmeticMean=Arithmetic mean
 AsDefinedInProcesses=As defined in processes
 AssessDataQuality=Assess data quality
 AssignUnits=Assign units
 Author=Author
 AvoidedProduct=Avoided product
 AvoidedProductFlow=Avoided product flow
+AvoidedWaste=Avoided waste
 AvoidedWasteFlow=Avoided waste flow
 BackgroundData=Background data
 BackupDatabase=Backup database
@@ -45,6 +46,9 @@ Browse=Browse
 BrowseLocalFiles=Browse local files...
 BuildNextTier=Build next tier
 BuildSupplyChain=Build supply chain
+Bulkreplace=Bulk-replace
+BulkreplaceFlows=Bulk-replace flows
+BulkreplaceProviders=Bulk-replace providers
 CASNumber=CAS number
 CSVFormat=CSV Format
 Calculate=Calculate
@@ -87,18 +91,24 @@ CollapseAll=Collapse all
 ColumnSeparator=Column separator
 Comma=Comma
 Comment=Comment
+Comments=Comments:
 Commit=Commit...
 CommitChangesToRepository=Commit changes to repository
+CommitDate=Commit date
+CommitError=An error occurred while receiving commit data
 CommitMessage=Commit message
 CommitReferenceNotice=Referenced changes that might be relevant to be committed as well
 CommitingChanges=Commiting changes
-CommitDate=Commit date
 Committer=Committer
 Compare=Compare
+CompareWith=Compare with
 ComparingWithRepository=Comparing with repository
 Complete=Complete
 CompleteReferenceData=Complete reference data
 Component=Component
+Compress=Compress
+CompressDatabase=Compress database
+CompressingDatabase=Compressing database...
 Configuration=Configuration
 ConfigureEcospoldMessage=On this page you can configure the exported EcoSpold format
 Connect=Connect
@@ -130,13 +140,16 @@ Costs=Costs
 CostsPerUnit=Costs/revenues per unit
 CostsRevenues=Costs/Revenues
 CouldNotAllocateMemoryError=openLCA could not allocate enough physical memory to perform the calculation. Please adjust your memory settings under 'File/Preferences' -> Configuration
+CouldNotConnect=Could not connect, please check your internet connection and the provided url
 CouldNotFindKMLData=Could not find KML data in the file you provided. Is it compliant to the EcoSpold2 format? More information regarding the format can be found at http://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=Could not open database
 CouldNotOverwriteFile=Could not overwrite file
 Country=Country
 Coverage=Coverage
 CreateANewDatabase=Create a new database
+CreateANewFlowForTheProcess=Create a new flow for the process
 CreateANewProductFlowForTheProcess=Create a new product flow for the process
+CreateAWasteTreatmentProcess=Create a waste treatment process
 CreateDatabase=Create database
 CreateDefaultValuesForMissingFields=Create default values for missing fields
 CreateNew=Create new
@@ -232,13 +245,16 @@ ElementaryFlow=Elementary flow
 Email=e-mail
 EmptyDatabase=Empty database
 EmptyValueMessage=The given value is empty.
+EnableCollaboration=Enable collaboration
 EnableJblasLibrary=Enable jblas library
 EndDate=End date
 EnterLocationNameAndCode=Please enter a name and the code of the new location
+EnterYourAuthenticatorToken=Enter your authenticator token
 Error=Error
 ErrorPopupMessage=See the log-file for further information
 ErrorPopupTitle=An unexpected error occured
 Errors=Errors
+EstimatedTimeRemaining=Estimated time remaining:
 EvaluateLocations=Evaluate for existing locations
 EvaluatingLocations=Evaluating locations
 EvaluationSchema=Evaluation schema
@@ -304,6 +320,7 @@ FormulaEvaluationFailed=Formula evaluation failed
 FormulaInterpreter=Formula interpreter
 FoundProblems=Found problems:
 FromDirectory=From directory:
+Function=Function
 FunctionalUnit=Functional unit
 GeneralInformation=General information
 Geography=Geography
@@ -367,6 +384,7 @@ ImportKMLGeographies=Import KML geographies
 ImportingKMLData=Importing KML data
 ImportingXMLData=Importing XML (EcoSpold2 format) data
 IncludeCostCalculation=Include cost calculation
+IndexingDatasets=Indexing datasets
 Indicator=Indicator
 IndicatorBarChart=Indicator bar chart
 Indicators=Indicators
@@ -431,11 +449,9 @@ LowOpportunity=Low opportunity
 LowRisk=Low risk
 ManagePlugins=Manage plugins
 Map=Map
+MapCanNotBeDisplayed=Map can not be displayed, do you have an active internet connection?
 Mark=Mark
 MarkAsMerged=Mark as merged
-Bulkreplace=Bulk-replace
-BulkreplaceFlows=Bulk-replace flows
-BulkreplaceProviders=Bulk-replace providers
 MatrixExport=Matrix Export
 MatrixFiles=Matrix files
 Maximize=maximize
@@ -463,16 +479,17 @@ ModelType=Model type
 ModelingAndValidation=Modeling and validation
 ModelingConstants=Modeling constants
 MonteCarloSimulation=Monte Carlo Simulation
+MoreThanXProcesses=More than 2000 processes will be displayed, this will take a while. Continue anyway?
 Move=move
 MoveDown=Move down
 MoveUp=Move up
 MultiLine=MultiLine
 MultiPoint=MultiPoint
 MultiPolygon=MultiPolygon
+NaValueHandling=n.a. value handling
 Name=Name
 NameCannotBeEmpty=The name cannot be empty
 NameShouldBeDifferent=The name should be different
-NaValueHandling=n.a. value handling
 NeedOpenDatabase=You need to open a database.
 NetCosts=Net costs
 Netcosts=Net-costs
@@ -514,6 +531,7 @@ NoQuantitativeReferenceSelected=No quantitative reference selected
 NoReferenceFlowPropertySelected=No reference flow property selected
 NoReferenceProcessSelected=No process with valid reference product output or waste input selected
 NoReferenceSet=No reference set
+NoRegionalizedInformation=No regionalized information
 NoRisk=No risk
 NoShapefileParameterSelected=There is no shapefile parameter selected that could be added as method parameter
 NoUnitGroupSelected=No unit group selected
@@ -536,9 +554,10 @@ NumberFormatPage_Description=Set the number of decimal places for the display of
 NumberOfDecimalPlaces=Number of decimal places
 NumberOfIterations=Number of iterations
 NumberOfSimulations=Number of simulations
-OfProduct=of product
 OK=OK
+OfProduct=of product
 OnlineHelp=Online help
+OnlyConnectDefaultProviders=Only connect default providers
 Open=Open
 OpenDatabase=Open database
 OpenEditor=Open editor
@@ -555,6 +574,7 @@ Outputs=Outputs
 OverwriteFile=Overwrite file
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 Parameter=Parameter
+ParameterAggregationFunction=Parameter aggregation function
 ParameterAlreadyAdded=Parameter already added
 ParameterDescriptionTable=Parameter description table
 ParameterValueTable=Parameter value table
@@ -570,9 +590,12 @@ PhysicalAndEconomicAllocation=Physical & economic allocation
 PleaseEnterAName=Please enter a name
 PleaseEnterANewName=Please enter a new name
 PleaseEnterTheNameOfTheNewCategory=Please enter the name of the new category:
-PleaseSelectThePropertiesForTheDataQualityAssessment=Please select the properties for the data quality assessment
+PleaseEnterYourAuthenticatorTokenToProceed=Please enter your authenticator token to proceed
+PleaseSelectElements=Please select the elements, that you want to import. Required references will be loaded as well, if not selected.
+PleaseSelectProperties=Please select the properties for the data quality assessment
 PleaseSpecifyHost=Please specify a host
 PleaseSpecifyPortNumber=Please specify a port number
+PleaseSpecifyCompleteUrl=Please specify the complete url of the repository you want to import from. If the repository is not publicly accessible you need to enter your credentials to connect.
 PleaseSpecifyUser=Please specify a user
 Point=Point
 Polygon=Polygon
@@ -614,6 +637,7 @@ Quantity=Quantity
 QuickResults=Quick results
 RawValue=Raw value
 ReallyDeleteShapeFile=Do you really want to delete the selected shape file? All changes will be saved automatically.
+RebuildIndex=Rebuild index
 RecalculateQuestion=Values will be recalculated, do you want to proceed?
 RecognizedLibraryDatasetsDescription=The following data sets were recognized as library data sets. Please be careful when commiting this data since it might violate licence restrictions.
 ReconnectProcesslink=reconnect processlink
@@ -647,7 +671,9 @@ Report=Report
 ReportName=Label in report
 ReportSections=Report sections
 ReportView=Report view
+Repository=Repository
 RepositoryId=Repository id
+RepositoryImport=Repository import
 Reset=Reset
 ResetAll=Reset all
 ResetSelection=Reset selection
@@ -661,6 +687,7 @@ Reviewer=Reviewer
 RiskLevel=Risk level
 RoundingMode=Rounding mode
 Route=Route
+RoutingEnabled=Routing enabled
 RunCalculation=Run calculation
 SamplingProcedure=Sampling procedure
 SankeyDiagram=Sankey diagram
@@ -672,6 +699,7 @@ SaveAsLCIResult=Save as LCI result
 SaveChanges=Save changes
 SaveChangesQuestion=Do you want to save the changes?
 SavingDiagramAsImageIn=Saving diagram as image in {0}
+ScanningRepository=Scanning repository
 Scores=Scores
 Search=Search
 SearchAllTypes=Search all types
@@ -700,6 +728,7 @@ Section=Section
 Select=Select {0}
 SelectADirectory=Select a directory
 SelectAll=Select all
+SelectDataSets=Select data sets
 SelectImportFiles=Select import files
 SelectLanguageNoteMessage=Changes will not take affect until openLCA is restarted
 SelectNext=Select next
@@ -707,6 +736,7 @@ SelectObjectPage_Description=Please specify an output directory and select the {
 SelectPrevious=Select previous
 SelectProviders=Select providers
 SelectRecipients=Select recipients
+SelectRepository=Select repository
 SelectTheExportFile=Select the export file
 SelectTheParameterYouWantToReferTo=Select the parameter you want to refer to
 SelectedCommit=Selected commit
@@ -714,12 +744,14 @@ SelectedParameterWasAlreadyAdded=The selected parameter was already added in thi
 Semicolon=Semicolon
 ServerConfigurations=Server configurations
 ServerUrl=Server url
+SetAsQuantitativeReference=Set as quantitative reference
 SetAsReferenceCurrency=Set as reference currency?
 SetReferenceCurrencyQuestion=Do you want to set this currency as the reference currency of the database?
 SetSankeyDiagramOptions=Set sankey diagram options
 Settings=Settings
 SettingsForTheSankeyDiagram=Settings for the Sankey diagram
 Show=show
+ShowComments=Show comments
 ShowExecutedUpdates=Show executed updates
 ShowFormulas=Show formulas
 ShowInHistory=Show in history
@@ -731,6 +763,8 @@ SimaProCSVImport=SimaPro CSV Import
 SingleScore=Single score
 SingleScoreBarChart=Single score bar chart
 SingleScoreTable=Single score table
+SizeAfterCompression=Size after compression
+SizeBeforeCompression=Size before compression
 SocialAspect=Social aspect
 SocialAspects=Social aspects
 SocialAssessment=Social assessment
@@ -739,6 +773,7 @@ SocialIndicator=Social indicator
 SocialIndicators=Social indicators
 SocialSchema=Social schema
 SolvingProblems=Solving problems
+SomeElementsAreNotSaved=Some elements referenced by the product system are not saved yet. The calculation will not take these into account. Do you want to save them now?
 SomeParametersWereNotAdded=Some parameters were not added because their names were either invalid or a parameter with the same name already existed.
 Source=Source
 SourceFileDeleteQuestion=Do you really want to delete this file?
@@ -767,6 +802,7 @@ TexchnologyMatrix=Technology matrix
 Text=Text
 TextDropComponent_ToolTipText=Drag a selected object from the navigation view into the text field or click to open a dialog.
 TextReference=Text reference
+ThisWillCompressTheDatabase=This will compress the database and free up unsused space. For bigger databases this might take a while.
 Time=Time
 TimeAndAuthor=Time and author
 TimeDescription=Time description
@@ -796,6 +832,7 @@ Units=Units
 UnitsAndFlowProperties=Units and flow properties
 Unknown=Unknown
 Unmark=Unmark
+UnsavedChanges=Unsaved changes
 Up=Up
 UpToDate=Up to date - No changes fetched
 Update=Update
@@ -828,6 +865,7 @@ Warning=Warning
 Warnings=Warnings
 Waste=Waste
 Website=Website
+WeightedArithmeticMean=Weighted arithmetic mean
 WeightedAverage=Weighted average
 WeightedSquaredAverage=Weighted squared average
 Weighting=Weighting
