Added inventory result info text and option for storage

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -81,6 +81,7 @@ CheckingOutCommit=Checking out commit
 Checkout=Checkout...
 ChooseDirectory=Choose directory...
 City=City
+Clear=Clear
 ClearData=Clear data
 ClickHereToChangeDisplay=Click here to change the display
 Close=Close
@@ -341,6 +342,7 @@ Groups=Groups
 HEADRevision=HEAD revision
 HTMLGraph=HTML Graph
 HalfUp=Half up
+HasInventoryResult=Has inventory result
 HasUncertainties=Has uncertainties
 Help=&Help
 Hide=Hide
@@ -784,6 +786,7 @@ StandardDeviationFormula=Standard deviation (formula)
 Start=Start
 StartDate=Start date
 Statistics=Statistics
+StoreInventoryResult=Store inventory result
 SubCategory=Sub-category
 SubgroupByProcesses=Subgroup by processes
 Synonyms=Synonyms
