Updated texts and icons

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -75,6 +75,7 @@ CategoryNotEmpty=The category is not empty.
 Causal=Causal
 CausalAllocation=Causal allocation
 Change=Change
+ChangesToBeFetched=Changes to be fetched
 CheckAgainstLibraries=Check against libraries
 CheckingAgainstLibraries=Checking against libraries
 CheckingOutCommit=Checking out commit
@@ -98,7 +99,7 @@ CommitChangesToRepository=Commit changes to repository
 CommitDate=Commit date
 CommitError=An error occurred while receiving commit data
 CommitMessage=Commit message
-CommitReferenceNotice=Referenced changes that might be relevant to be committed as well
+CommitReferenceNotice=Referenced changes that should be committed as well
 CommitingChanges=Commiting changes
 Committer=Committer
 Compare=Compare
@@ -292,7 +293,6 @@ Factors=Factors
 FailedToLoadFlowProperty=Failed to load flow property
 Fetch=Fetch...
 FetchRemoteModel=Fetch remote model
-FetchedChanges=Fetched changes
 FetchingChanges=Fetching changes
 FetchingCommits=Fetching commits
 FetchingData=Fetching data
@@ -640,6 +640,7 @@ QuickResults=Quick results
 RawValue=Raw value
 ReallyDeleteShapeFile=Do you really want to delete the selected shape file? All changes will be saved automatically.
 RebuildIndex=Rebuild index
+RebuildingIndex=Rebuilding index
 RecalculateQuestion=Values will be recalculated, do you want to proceed?
 RecognizedLibraryDatasetsDescription=The following data sets were recognized as library data sets. Please be careful when commiting this data since it might violate licence restrictions.
 ReconnectProcesslink=reconnect processlink
@@ -674,8 +675,8 @@ ReportName=Label in report
 ReportSections=Report sections
 ReportView=Report view
 Repository=Repository
-RepositoryId=Repository id
 RepositoryImport=Repository import
+RepositoryPath=Repository path
 Reset=Reset
 ResetAll=Reset all
 ResetSelection=Reset selection
